@@ -6,21 +6,18 @@ import org.codingmatters.value.objects.values.ObjectValue;
 import org.codingmatters.value.objects.values.PropertyValue;
 
 import java.io.IOException;
-import java.math.BigDecimal;
-import java.text.NumberFormat;
-import java.text.ParseException;
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 
 public class ObjectValueReader {
 
     public ObjectValue read(JsonParser parser) throws IOException {
-        if(parser.getCurrentToken() == null) {
+        if (parser.getCurrentToken() == null) {
             parser.nextToken();
         }
-        if(parser.currentToken() == null) return null;
-        if(parser.currentToken() == JsonToken.VALUE_NULL) return null;
-        if(parser.currentToken() != JsonToken.START_OBJECT) {
+        if (parser.currentToken() == null) return null;
+        if (parser.currentToken() == JsonToken.VALUE_NULL) return null;
+        if (parser.currentToken() != JsonToken.START_OBJECT) {
             throw new IOException(
                     String.format("reading a %s object, was expecting %s, but was %s",
                             ObjectValue.class.getName(), JsonToken.START_OBJECT, parser.currentToken()
@@ -34,11 +31,11 @@ public class ObjectValueReader {
     private ObjectValue.Builder objectValue(JsonParser parser) throws IOException {
         ObjectValue.Builder builder = ObjectValue.builder();
         while (parser.nextToken() != JsonToken.END_OBJECT) {
-            String propertyName = parser.getCurrentName();
+            String propertyName = parser.currentName();
             PropertyValue propertyValue = null;
 
             parser.nextToken();
-            if(parser.currentToken() == JsonToken.START_ARRAY) {
+            if (parser.currentToken() == JsonToken.START_ARRAY) {
                 propertyValue = this.multiplePropertyValue(parser);
             } else {
                 propertyValue = this.singlePropertyValue(parser);
@@ -51,31 +48,28 @@ public class ObjectValueReader {
     }
 
     private PropertyValue multiplePropertyValue(JsonParser parser) throws IOException {
-        List<PropertyValue.Value> values = new LinkedList<>();
+        List<PropertyValue.Value> values = new ArrayList<>();
         while (parser.nextToken() != JsonToken.END_ARRAY) {
             values.add(this.valueBuilder(parser).buildValue());
         }
 
-        PropertyValue.Type type = values.isEmpty() ? PropertyValue.Type.STRING : values.get(0).type();
-        return PropertyValue.multiple(type, values.toArray(new PropertyValue.Value[values.size()]));
+        PropertyValue.Type type = values.isEmpty() ? PropertyValue.Type.STRING : values.getFirst().type();
+        return PropertyValue.multiple(type, values.toArray(new PropertyValue.Value[0]));
     }
 
     private PropertyValue.Builder valueBuilder(JsonParser parser) throws IOException {
-        if(parser.currentToken() == JsonToken.VALUE_NULL) {
-            return PropertyValue.builder()
-                    .stringValue(null);
-        } else if(parser.currentToken().isScalarValue()) {
-            if (parser.currentToken().isBoolean()) {
-                return PropertyValue.builder()
-                        .booleanValue(Boolean.parseBoolean(parser.getText()));
-            } else if (parser.currentToken().isNumeric()) {
-                return PropertyValue.builder()
-                            .doubleValue(Double.parseDouble(parser.getText()));
+        JsonToken currentToken = parser.currentToken();
+        if (currentToken == JsonToken.VALUE_NULL) {
+            return PropertyValue.builder().stringValue(null);
+        } else if (currentToken.isScalarValue()) {
+            if (currentToken.isBoolean()) {
+                return PropertyValue.builder().booleanValue(Boolean.parseBoolean(parser.getText()));
+            } else if (currentToken.isNumeric()) {
+                return PropertyValue.builder().doubleValue(Double.parseDouble(parser.getText()));
             } else {
-                return PropertyValue.builder()
-                        .stringValue(parser.getText());
+                return PropertyValue.builder().stringValue(parser.getText());
             }
-        } else if(parser.currentToken() == JsonToken.START_OBJECT) {
+        } else if (currentToken == JsonToken.START_OBJECT) {
             return PropertyValue.builder().objectValue(this.objectValue(parser));
         } else {
             return PropertyValue.builder();
@@ -91,15 +85,15 @@ public class ObjectValueReader {
         if (parser.currentToken() == null) return null;
         if (parser.currentToken() == JsonToken.VALUE_NULL) return null;
         if (parser.currentToken() == JsonToken.START_ARRAY) {
-            LinkedList<ObjectValue> listValue = new LinkedList<>();
+            List<ObjectValue> listValue = new ArrayList<>();
             while (parser.nextToken() != JsonToken.END_ARRAY) {
-                if(parser.currentToken() == JsonToken.VALUE_NULL) {
+                if (parser.currentToken() == JsonToken.VALUE_NULL) {
                     listValue.add(null);
                 } else {
                     listValue.add(this.read(parser));
                 }
             }
-            return listValue.toArray(new ObjectValue[listValue.size()]);
+            return listValue.toArray(new ObjectValue[0]);
         }
         throw new IOException(String.format("failed reading org.codingmatters.value.objects.values.ObjectValue array, current token was %s", parser.currentToken()));
     }
